overflow fixed
in design

--- a/src/ClientSide/Design/VisualDesign.css
+++ b/src/ClientSide/Design/VisualDesign.css
@@ -200,6 +200,7 @@ button:active {
     border-radius: 12px;
     padding: 50px;
     box-sizing: border-box;
+    overflow: auto;
 }
 #mazeCanvas {
     z-index: 500;
